src/sass/components/search.scss
@use "../variables" as *;

.search {
    display: flex;
    flex-flow: column;
    width: clamp(15rem, 20vw, 30rem);

    input {
        border: none;
        outline: none;
        font: inherit;
        padding: 0.5rem 1rem;
        border-radius: 8px;
    }

    &__results {
        list-style: none;
        margin-inline: 0.5rem;
        max-height: 20em;
        overflow-y: auto;
        border-radius: 0 0 8px 8px;
        background-color: $black;

        &::-webkit-scrollbar {
            width: 0.4em;

            &-thumb {
                background-color: $darkgrey;
                border-radius: 0.4em;
            }
        }

        &__no-results {
            text-align: center;
            color: $darkgrey;
            padding: 0.5rem;
        }
    }

    &__result {
        display: grid;
        grid-template-columns: 2.5em 1fr;
        gap: 0.5rem;
        padding: 0.5rem;
        align-items: center;
        cursor: pointer;

        &:hover {
            background-color: $darkgrey;
        }

        &__info {
            line-height: 1;

            p {
                color: $lightgrey;
                font-size: 0.8rem;
            }
        }
    }
}

